second commit with intents

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="20dp"
         android:background="#000"
         android:textColor="#fff"
+        android:onClick="EnterApp"
         android:text="ENTER APP"
         android:layout_height="wrap_content" />
 
