--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".OpeningActivity">
+    android:background="#D3D3D3"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="Now Showing"
+                android:background="#D3D3D3"
+                android:id="@+id/nowshowing"
+                android:gravity="center"
+                android:textSize="40dp"
+                android:textColor="#ff0000"
+                android:fontFamily="cursive"
+                android:layout_height="match_parent" />
+            <Button
+                android:layout_width="100dp"
+                android:background="#D3D3D3"
+                android:textColor="#800080"
+                android:text="View All"
+                android:onClick="ViewAll1"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:id="@+id/mainrecyclerview1"/>
 
-</android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
+
+</ScrollView>
