--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#D3D3D3"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -32,8 +35,54 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:id="@+id/mainrecyclerview1"/>
-
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="Popular"
+                android:gravity="center"
+                android:textSize="40dp"
+                android:background="#D3D3D3"
+                android:textColor="#32C"
+                android:fontFamily="cursive"
+                android:layout_height="match_parent" />
+            <Button
+                android:layout_width="100dp"
+                android:background="#D3D3D3"
+                android:textColor="#800080"
+                android:text="View All"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:id="@+id/mainrecyclerview2"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="Top Rated"
+                android:fontFamily="cursive"
+                android:background="#D3D3D3"
+                android:gravity="center"
+                android:textSize="40dp"
+                android:textColor="#722f37"
+                android:layout_height="match_parent" />
+            <Button
+                android:layout_width="100dp"
+                android:textColor="#800080"
+                android:background="#D3D3D3"
+                android:text="View All"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:id="@+id/mainrecyclerview3"/>
     </LinearLayout>
 
 </ScrollView>
