--- a/app/src/main/res/layout/activity_now_playing_movie_details.xml
+++ b/app/src/main/res/layout/activity_now_playing_movie_details.xml
@@ -1,110 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3D3D3"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.vibhu.imdb.NowPlayingMovieDetails"
-    tools:showIn="@layout/activity_now_playing_movie_details">
-    <ScrollView
+    tools:context=".NowPlayingMovieDetails">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="300dp"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="30sp"
-                android:layout_marginLeft="20dp"
-                android:background="#ff0000"
-                android:text="ADD TO FAV"
-                android:id="@+id/button"
-                android:onClick="AddToFavourites"
-                android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:toolbarId="@+id/toolbar">
 
-            <TextView
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:id="@+id/ratings"
-                android:gravity="center"
-                android:textSize="30sp"
-                android:fontFamily="casual"
-                android:layout_marginTop="10dp"
-                android:layout_height="wrap_content" />
-            <TextView
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" >
+            </android.support.v7.widget.Toolbar>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:id="@+id/description"
-                android:gravity="center"
-                android:fontFamily="casual"
-                android:layout_marginTop="20dp"
-                android:textColor="#800080"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="match_parent"
-                android:id="@+id/releasedate"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:fontFamily="casual"
-                android:textColor="#32CD32"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginTop="30dp"
-                android:textSize="40sp"
-                android:textColor="#ff0000"
-                android:text="Production Companies"
-                android:paddingLeft="20dp"
-                android:fontFamily="cursive"
-                android:layout_height="wrap_content" />
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:id="@+id/ProductionRecyclerView"
-                android:layout_height="200dp">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="200dp"
+                    android:scaleType="fitXY"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/NowPlayingImageDetails"
+                    android:layout_height="200dp" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:id="@+id/NowPlayingTitleDetails"
+                    android:textSize="30sp"
+                    android:fontFamily="cursive"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#ff0000"
+                    android:layout_height="70dp" />
+            </LinearLayout>
 
-            </android.support.v7.widget.RecyclerView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginTop="30dp"
-                android:textSize="40sp"
-                android:textColor="#ff0000"
-                android:text="CAST"
-                android:paddingLeft="20dp"
-                android:fontFamily="cursive"
-                android:layout_height="wrap_content" />
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:id="@+id/castRecyclerView"
-                android:layout_height="200dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginTop="30dp"
-                android:textSize="40sp"
-                android:textColor="#ff0000"
-                android:text="Similar Movies"
-                android:paddingLeft="20dp"
-                android:fontFamily="cursive"
-                android:layout_height="wrap_content" />
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:id="@+id/SimilarRecyclerView"
-                android:layout_height="200dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_marginTop="30dp"
-                android:textSize="40sp"
-                android:textColor="#ff0000"
-                android:text="Trailers and other videos"
-                android:paddingLeft="20dp"
-                android:fontFamily="cursive"
-                android:layout_height="wrap_content" />
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:id="@+id/TrailerRecyclerView"
-                android:layout_height="200dp"/>
 
-        </LinearLayout>
-    </ScrollView>
-</android.support.v4.widget.NestedScrollView>
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_now_playing_movie_details" />
+
+
+
+</android.support.design.widget.CoordinatorLayout>
